# pydatav

./: .gitignore  Dockerfile  README.md  setup.cfg
nginx/: nginx.conf
office/lib/utils/: except_utils.py
pydatav/: __init__.py
pydatav/api/: flask_web.py  word.py
pydatav/cli/: main.py
pydatav/core/: ExcelParser.py
pydatav/resources/templates/: index.html
pydatav/resources/templates/case01/: index.html
pydatav/resources/templates/case02/: index.html
pydatav/resources/templates/case03/: index.html
pydatav/resources/templates/case04/: index.html
tests/: __init__.py
