[metadata]
name = pydatav
version = 0.0.1
description = python for datav
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoderWanFeng/datav
author = CoderWanFeng
author_email = 1957875073@qq.com
license = Apache-2.0 license
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/datav/issues
    Documentation = https://github.com/CoderWanFeng/datav/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/datav

[options]
packages = find:
install_requires =
    rich >= 9.13.0
    you-get
    PyOfficeRobot
    poimage
    poexcel
    pofile
    popdf
    poppt
    wftools
    povideo
    poword

python_requires = >=3.8
include_package_data = True
zip_safe = False
