[metadata]
name = pydatav
version = 0.0.1
description = python for data visualisation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoderWanFeng/pydatav
author = CoderWanFeng
author_email = 1957875073@qq.com
license = Apache-2.0 license
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/pydatav/issues
    Documentation = https://github.com/CoderWanFeng/pydatav/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/pydatav

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
